# nhl-data

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
app/: producer.py  test_event.json
infra/cloudformation/: resources.yml
ingestion/: Dockerfile  nhl_api_s3.py  nhl_api_supabase.py  nhl_games.json  producer.py  pyproject.toml  supabase_lambda.py
ingestion/lib/: nhl_api.py  s3_uploader.py  supbase_uploader.py
scripts/app/docker/: run.sh
scripts/infra/: deploy.sh
scripts/ingestion/docker/: build.sh  push.sh  run.sh
scripts/shared/: common.sh  ecr_base.sh
scripts/transform/docker/: build.sh  run.sh
transform/: .gitignore  Dockerfile  dbt_project.yml  pyproject.toml
transform/models/base/: games.sql  games.yml  plays.sql  plays.yml  roster.sql  roster.yml  teams.sql  teams.yml
transform/models/staging/: sources.yml  stg_games.sql
